--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cbitmap"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 license = "MIT"
 
@@ -21,3 +21,6 @@ name = "bitmap-base"
 
 [[test]]
 name = "bitmap-base"
+
+[[test]]
+name = "bitmap-panic"
