--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cbitmap"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2021"
 license = "MIT"
 
@@ -14,7 +14,13 @@ documentation = "https://docs.rs/cbitmap"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+bench = false # ignoring libtest check, so criterion cmd options can be used.
+
 [dependencies]
+
+[dev-dependencies]
+criterion = { version = "0.4", features = ["html_reports"] }
 
 [[example]]
 name = "bitmap-base"
@@ -24,3 +30,7 @@ name = "bitmap-base"
 
 [[test]]
 name = "bitmap-panic"
+
+[[bench]]
+name = "bitmap-base"
+harness = false
