Add an extensive example
* Add bitmap-usecase, an extensive example.
* Add find_first_one(), find_first_zero(), all(), none(), any(), count() and test().

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ criterion = { version = "0.4", features = ["html_reports"] }
 
 [[example]]
 name = "bitmap-base"
+[[example]]
+name = "bitmap-usecase"
 
 [[test]]
 name = "bitmap-base"
