--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,10 @@ bench = false # ignoring libtest check, so criterion cmd options can be used.
 [dev-dependencies]
 criterion = { version = "0.4", features = ["html_reports"] }
 
+[features]
+default = ["alloc"]
+alloc = []
+
 [[example]]
 name = "bitmap-base"
 [[example]]
